fatto refactoring del rpogetto
